--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ez_wait_web",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -9,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@line/bot-sdk": "^9.4.2",
+    "axios": "^1.7.7",
+    "firebase": "^11.0.1",
+    "next": "15.0.1",
+    "next-seo": "^6.6.0",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
     "typescript": "^5",
