--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@line/bot-sdk": "^9.4.2",
-    "axios": "^1.7.7",
-    "firebase": "^11.0.1",
+    "@line/bot-sdk": "^9.9.0",
+    "@tailwindcss/postcss": "^4.1.14",
+    "axios": "^1.12.2",
+    "firebase": "^11.10.0",
     "next": "15.0.1",
-    "next-seo": "^6.6.0",
+    "next-seo": "^6.8.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
+    "typescript": "^5.9.3",
+    "@types/node": "^20.19.22",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.1"
   }
 }
